Display HEX codes, adjust the layout.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,19 +5,25 @@
     <link rel="stylesheet" href="main.css" />
     <script type="module" src="./index.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-    <title>Hello World</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
+    <title>Color Palette</title>
   </head>
   <body>
-    <p>Color Palette</p>
-    <div class="gen-container">
-      <button class="generate" id="generate">Generate Random</button>
+    <nav class="navbar">
+      <span>HueHut</span>
+    </nav>
+    <div class="toolbar">
+      <a class="generate" id="generate">Generate Random</a>
     </div>
     <div class="palette">
-      <div class="gen-color">Color 1</div>
-      <div class="gen-color">Color 2</div>
-      <div class="gen-color">Color 3</div>
-      <div class="gen-color">Color 4</div>
-      <div class="gen-color">Color 5</div>
+      <div class="gen-color"><b>Color 1</b></div>
+      <div class="gen-color"><b>Color 2</b></div>
+      <div class="gen-color"><b>Color 3</b></div>
+      <div class="gen-color"><b>Color 4</b></div>
+      <div class="gen-color"><b>Color 5</b></div>
     </div>
   </body>
 </html>
