Change the font, add the logo button.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="main.css" />
     <script type="module" src="./index.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
@@ -13,7 +13,10 @@
   </head>
   <body>
     <nav class="navbar">
-      <span>HueHut</span>
+      <div class="logo-wrapper">
+        <img src="static/HueHut_logo_b.png" alt="HueHut Logo Text" class="logo-text" />
+        <img src="static/HueHut_drop.png" alt="HueHut Teardrop" class="logo-drop" />
+      </div>
     </nav>
     <div class="toolbar">
       <a class="generate" id="generate">Generate Random</a>
