Add color reordering. Improve UI.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -79,11 +79,11 @@
 
 
     <div class="palette">
-      <div class="gen-color"><b>Color 1</b></div>
-      <div class="gen-color"><b>Color 2</b></div>
-      <div class="gen-color"><b>Color 3</b></div>
-      <div class="gen-color"><b>Color 4</b></div>
-      <div class="gen-color"><b>Color 5</b></div>
+      <div class="gen-color" draggable="true" data-index="0"><b>Color 1</b></div>
+      <div class="gen-color" draggable="true" data-index="1"><b>Color 2</b></div>
+      <div class="gen-color" draggable="true" data-index="2"><b>Color 3</b></div>
+      <div class="gen-color" draggable="true" data-index="3"><b>Color 4</b></div>
+      <div class="gen-color" draggable="true" data-index="4"><b>Color 5</b></div>
     </div>
   </body>
 </html>
